# WonderSuite-Ai-Bug-Bounty

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build-release.cmd  index.html  package-lock.json  package.json  plan.md
.claude/skills/: wondersuite.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  update-chromium-pin.yml
docs/: v0.3.7-portscan-plan.md
scripts/: backfill-release-notes.ps1  build-thumbnail.ps1  refresh-chromium-pin.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/packaging/deb/: postinst  postrm  wondersuite-browser.apparmor
src-tauri/resources/: chromium_pin.json
src-tauri/resources/jslib/: fingerprints.json
src-tauri/resources/wondersuite-extension/: background.js  manifest.json
src-tauri/resources/wondersuite-extension/content/: hooks.js  relay.js  stealth.js
src-tauri/src/: agent_browser.rs  ai_chat.rs  browser.rs  browser_migration.rs  chromium_commands.rs  commands.rs  crawler_commands.rs  http2.rs  intruder.rs  lib.rs  main.rs  mcp.rs  mcp_backup.rs  oast.rs  oast_commands.rs  osint_commands.rs  payload_commands.rs  port_commands.rs  portscan_commands.rs  project.rs  proxy_commands.rs  reporting.rs  scanner.rs  scanner_commands.rs  session.rs  session_commands.rs  system.rs  tls_impersonate.rs  updater.rs  websocket_commands.rs  window_manager.rs
src-tauri/src/chromium/: download.rs  error.rs  extract.rs  gc.rs  mod.rs  pin.rs  verify.rs
src-tauri/src/crawler/: cookies.rs  engine.rs  js_endpoints.rs  meta.rs  mod.rs  path.rs  queue.rs  render.rs  robots.rs  sitemap.rs  soft404.rs  spa.rs  task.rs  well_known.rs
src-tauri/src/jslib/: mod.rs
src-tauri/src/mcp/: activity.rs  client.rs  mod.rs  router.rs  state.rs  types.rs  utils.rs
src-tauri/src/mcp/browser/: handlers.rs  input.rs  mod.rs  network.rs  session.rs  snapshot.rs  stealth_check.rs
src-tauri/src/mcp/handlers/: advanced.rs  browser.rs  cdn_waf.rs  codec.rs  http.rs  intruder.rs  jslib.rs  mod.rs  oast.rs  osint.rs  portscan.rs  proxy.rs  recon.rs  session.rs  websocket.rs
src-tauri/src/mcp/handlers/payloads/: downloader.rs  mod.rs  registry.rs
src-tauri/src/mcp/handlers/scanner/: active.rs  fuzzer.rs  mod.rs  passive.rs  reporting.rs  source.rs
src-tauri/src/portscan/: mod.rs  orchestrator.rs  output.rs  service_probes.rs  targets.rs  timing.rs  types.rs  windivert_ffi.rs  windriver.rs
src-tauri/src/portscan/engine/: connect.rs  mod.rs  syn.rs  udp.rs
src-tauri/src/portscan/probes/: mod.rs  tls.rs
src-tauri/src/proxy/: ca.rs  engine.rs  mod.rs  state.rs
src-tauri/tests/: crawler_test_coverage.rs
src-tauri/tests/fixtures/: crawler_test_html.html
src/components/: BrowserDownloadModal.css  BrowserDownloadModal.tsx  UpdateNotification.css  UpdateNotification.tsx
src/components/layout/: DetachedWindowApp.css  DetachedWindowApp.tsx  ProjectLauncher.css  ProjectLauncher.tsx  Shell.css  Shell.tsx  Sidebar.css  Sidebar.tsx  Splash.css  Splash.tsx  StatusBar.css  StatusBar.tsx  Titlebar.css  Titlebar.tsx  moduleMap.tsx
src/components/shared/: ContextMenu.css  ContextMenu.tsx
src/hooks/: useKeyboardShortcuts.ts  useUpdater.ts  useVisibilityAwareInterval.ts
src/lib/: desktopNotify.ts
src/modules/agent/: Agent.css  Agent.tsx
src/modules/attack/: Attack.css  Attack.tsx
src/modules/changelog/: Changelog.css  Changelog.tsx
src/modules/comparer/: Comparer.css  Comparer.tsx
src/modules/dashboard/: Dashboard.css  Dashboard.tsx
src/modules/discovery/: Discovery.css  Discovery.tsx
src/modules/docs/: Docs.css  Docs.tsx
src/modules/docs/content/: agent.md  comparer.md  dashboard.md  discovery.md  findings.md  glossary.md  intercept.md  intruder.md  logger.md  manifest.ts  mcp-tools.md  oast.md  organizer.md  osint.md  overview.md  payloads.md  ports.md  projects.md  repeater.md  scanner.md  session.md  (+14 more)
src/modules/findings/: Findings.css  Findings.tsx
src/modules/intercept/: Intercept.css  Intercept.tsx
src/modules/logger/: Logger.css  Logger.tsx
src/modules/oast/: Oast.css  Oast.tsx
src/modules/organizer/: Organizer.css  Organizer.tsx
src/modules/osint/: Osint.css  Osint.tsx
src/modules/payloads/: Payloads.css  Payloads.tsx  category-info.ts
src/modules/placeholder/: Placeholder.tsx
src/modules/ports/: Ports.css  Ports.tsx
src/modules/replay/: Replay.css  Replay.tsx
src/modules/scan/: Scan.css  Scan.tsx
src/modules/session/: Session.css  Session.tsx
src/modules/settings/: BrowserSettingsPanel.css  BrowserSettingsPanel.tsx  Settings.css  Settings.tsx
src/modules/sitemap/: MermaidView.tsx  Sitemap.css  Sitemap.tsx  VisualMap.tsx
src/modules/templates/: Templates.css  Templates.tsx
src/modules/tokens/: Tokens.css  Tokens.tsx
src/modules/tools/: Tools.css  Tools.tsx
src/modules/traffic/: Traffic.css  Traffic.tsx
src/modules/websocket/: WebSocket.css  WebSocket.tsx
src/stores/: appSettingsStore.ts  changelogStore.ts  crossWindowSync.ts  detachedStore.ts  index.ts  portscanStore.ts  projectStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: harExport.ts  notify.ts  projectState.ts  requestExport.ts
tiktok-slides/: README.md  export-png.cmd  index.html  slide-01-hook.html  slide-02-intro.html  slide-03-dashboard.html  slide-04-mcp.html  slide-05-scanner.html  slide-06-proxy.html  slide-07-sitemap.html  slide-08-oast.html  slide-09-stack.html  slide-10-cta.html  styles.css
tiktok-slides-flex/: MARKET-RESEARCH.md  README.md  export-png.cmd  index.html  slide-01-hook.html  slide-02-pov.html  slide-03-afk.html  slide-04-loadout.html  slide-05-receipts.html  slide-06-cta.html  styles.css
tiktok-slides-vs-burp/: README.md  export-png.cmd  index.html  slide-01-hook.html  slide-02-receipt.html  slide-03-vs.html  slide-04-show.html  slide-05-ai.html  slide-06-cta.html  styles.css
