[package]
name = "wondersuite"
version = "0.1.3"
description = "AI-Native Web Security Testing Platform"
authors = ["WonderSuite Team"]
edition = "2021"

[lib]
name = "wondersuite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "socks"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
httparse = "1"
dashmap = "6"
http = "1"
bytes = "1"
sha2 = "0.11"
sha1 = "0.10"
md5 = "0.7"
url = "2"
# WebSocket: use native-tls backend (no rustls/aws-lc-rs/ring needed)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
lazy_static = "1"
base64 = "0.22"
urlencoding = "2"

# ── TLS (proxy MITM + mcp.rs outbound) ──
native-tls = "0.2"
tokio-native-tls = "0.3"

# ── Certificate Generation (pure Rust, zero C deps) ──
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = { version = "0.10", features = ["pem", "std"] }
x509-cert = { version = "0.2", features = ["builder", "pem"] }
der = { version = "0.7", features = ["pem", "std", "alloc"] }
spki = { version = "0.7", features = ["pem"] }
const-oid = { version = "0.9", features = ["db"] }

# ── Crypto utilities ──
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# ── PKCS#12 (PFX) generation for Windows SChannel TLS identity ──
p12 = "0.6"

# ── Platform directories ──
dirs = "5"

# ── Release Profile ──
[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
