[package]
name = "wondersuite"
version = "0.3.18"
description = "AI-Native Web Security Testing Platform"
authors = ["WonderSuite Team"]
edition = "2021"

[lib]
name = "wondersuite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "socks", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
httparse = "1"
dashmap = "6"
http = "1"
bytes = "1"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
url = "2"
# WebSocket: use native-tls backend (no rustls/aws-lc-rs/ring needed)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
lazy_static = "1"
base64 = "0.22"
urlencoding = "2"

# ── TLS (proxy MITM + mcp.rs outbound) ──
native-tls = "0.2"
tokio-native-tls = "0.3"

# ── Certificate Generation (pure Rust, zero C deps) ──
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = { version = "0.10", features = ["pem", "std"] }
x509-cert = { version = "0.2", features = ["builder", "pem"] }
der = { version = "0.7", features = ["pem", "std", "alloc"] }
spki = { version = "0.7", features = ["pem"] }
const-oid = { version = "0.9", features = ["db"] }

# ── Crypto utilities ──
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
siphasher = "1"
once_cell = "1"

# ── Raw-socket SYN port scanner (v0.3.7) ──
# Just packet building/parsing — we deliberately do NOT pull pnet_datalink
# because its Windows backend forces a link against Packet.lib (pcap import
# library) even when unused. The Windows SYN path uses WinDivert at the
# WFP callout layer instead, which doesn't need L2 plumbing.
pnet_packet = "0.35"

# ── PKCS#12 (PFX) generation for Windows SChannel TLS identity ──
p12 = "0.6"

# ── Platform directories ──
dirs = "5"

# ── Chromium download + extraction (browser vendoring, v0.2.0) ──
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
flate2 = "1"

# ── HTML/XML parsing helpers (crawler, v0.2.0) ──
# The crawler uses regex + url + flate2 for the hot paths; idna handles
# punycode hostnames for the path canonicalizer. Other parser crates are
# intentionally not pulled in to keep build times short — the regex pass
# covers the same ~85% surface area as a full DOM parser for our purposes.
idna = "1"

# ── TLS impersonation (proxy outbound JA3/JA4 + HTTP/2 fingerprint, v0.3.0) ──
# wreq + boring-sys2 (statically-linked BoringSSL) is windows + macOS only.
# On Linux it collides with native-tls's system OpenSSL link at the static-vs-
# dynamic boundary (either undefined OpenSSL-3 symbols when system libssl
# loses the path race, or duplicate SSL_* symbols when openssl-sys is vendored).
# Linux desktop is a small share and Cloudflare/Akamai care about the
# browser's fingerprint, not the proxy host OS — falling back to native-tls
# there is acceptable until we migrate the MITM server side off native-tls.
# Cost on win+mac: ~15 MB binary + ~5min first build (BoringSSL compile).
# CI: cmake + nasm + perl on Windows runners (chocolatey).
[target.'cfg(not(target_os = "linux"))'.dependencies]
wreq = { version = "5", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "socks"] }
wreq-util = { version = "2", features = ["emulation"] }
webpki-root-certs = "1"

# Per-platform raw-socket SYN scanner extras.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
# L3 raw socket TX/RX via pnet's transport layer. Unix-only — Windows uses
# WinDivert (kernel WFP callout) instead.
pnet_transport = "0.35"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# Manual WinDivert FFI via libloading — see src/portscan/windivert_ffi.rs.
# We bundle WinDivert.dll + WinDivert64.sys (LGPLv3, EV-signed by Reqrypt LLC)
# under resources/drivers/windivert/ and dlopen the DLL at *first SYN scan*
# (not at app startup), so the .exe launches cleanly on machines with no
# pcap stack. No `windivert` / `windivert-sys` crate dep — those force a
# static link that breaks app startup on stock Windows.
libloading = "0.8"
windows = { version = "0.58", features = [
    "Win32_System_Services",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-registry = "0.5"

# ── Release Profile ──
[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
